samples/_failures_safe/1761324828_4f0702_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3bcd8e0.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f3bcd8e0.c:175:5: error: expected expression at end of input
  175 |     if (!token_list_add(list,
      |     ^~
./samples/SAFE/__tmp_f3bcd8e0.c:175:5: error: expected declaration or statement at end of input
